--- a/themes/kscu-theme/layouts/partials/header/basic.html
+++ b/themes/kscu-theme/layouts/partials/header/basic.html
@@ -17,7 +17,7 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 <!-- Currently coded in mix of Tailwind and standard CSS -->
-<!-- 
+<!-- Navigation bar without margins
   position: relative;
   width: 100vw;
   left: 50%;
@@ -29,17 +29,23 @@
  -->
 <div id="nav" class="font-medium text-sm z-10">
   <div class="px-6 pt-4 max-w-7xl m-auto">
-    <div class="flex justify-between items-center overflow-hidden" style="
+    <div class="flex justify-between items-center overflow-hidden"
+      style="
       border: 1px solid black;
       height: 58px;
       overflow: hidden;
       ">
-      <div class="flex px-0 items-center" style="
+      <div class="flex px-0 items-center" 
+      style="
       border-right: 1px solid black;
       height: 100%;
       min-width: 100px;
       ">
-        <a class="p-0 flex items-center justify-center" href="/" style="width: 100%; height: 100%;">
+        <a class="p-0 flex items-center justify-center" href="/" 
+        style="
+        width: 100%; 
+        height: 100%;
+        ">
           <div class="px-1">
             <img id="kscu-logo" class="mx-0" src="/kscu_logo.svg" alt="KSCU Logo" width="120"></img>
           </div>
@@ -48,14 +54,23 @@
       <!-- Vertical Flexbox -->
       <div class="flex flex-col w-screen">
         <!-- Top Row Flexbox -->
-        <div id="top-row" class="flex justify-between items-center" style="height: 29px;">
+        <div id="top-row" class="flex justify-between items-center" 
+          style="
+          height: 29px;
+          ">
           <div class="flex px-1 items-center">
             <div class="flex items-center">
-              <!-- id live-play for text live and divisor -->
+              <!-- id live-play for text live and divisor for mobile -->
               <p id="live-play" class="px-2 font-bold">LIVE</p>
               <span id="live-now-circle"></span>
             </div>
-            <div id="live-play" style="height: 30px; width: 1px; background-color: black; margin-left: 0.5rem;"></div>
+            <div id="live-play" 
+              style="
+              height: 30px; 
+              width: 1px; 
+              background-color: black; 
+              margin-left: 0.5rem;
+              "></div>
             <div style="
             background-color: black;
             height: 100%;"></div>
@@ -63,45 +78,103 @@
             <div id="play-pause" class="flex-grow m-0 px-0 py-0">
               <button>
                 <img id="play" src="/play-solid.svg" alt="Click to Play" width="12"
-                  style="margin-top: 12px; margin-bottom: 6px; margin-left: 14px; margin-right: 14px; transition: filter 0.1s;">
+                  style="
+                  margin-top: 12px; 
+                  margin-bottom: 6px; 
+                  margin-left: 14px; 
+                  margin-right: 14px; 
+                  transition: filter 0.1s;
+                  ">
                 <img id="pause" src="/pause-solid.svg" alt="Click to Pause" height="12" width="12"
-                  style="margin-top: 12px; margin-bottom: 6px; margin-left: 14px; margin-right: 14px; transition: filter 0.1s; display:none;">
+                  style="
+                  margin-top: 12px; 
+                  margin-bottom: 6px; 
+                  margin-left: 14px; 
+                  margin-right: 14px; 
+                  transition: filter 0.1s; 
+                  display:none;
+                  ">
                 <img id="loader" src="/tower-broadcast-solid.svg" alt="Loading" height="12" width="12"
-                  style="margin-top: 12px; margin-bottom: 6x; margin-left: 14px; margin-right: 14px; transition: filter 0.1s;display:none;">
+                  style="
+                  margin-top: 12px; 
+                  margin-bottom: 6x; 
+                  margin-left: 14px; 
+                  margin-right: 14px; 
+                  transition: filter 0.1s;
+                  display:none;
+                  ">
               </button>
             </div>
-            <div id="volume-icon" style="height: 30px; width: 1px; background-color: black;"></div>
+            <div id="volume-icon" 
+              style="
+              height: 30px; 
+              width: 1px; 
+              background-color: black;
+              "></div>
             <div id="desktop-volume-div" class="flex-grow m-0 px-0 py-0">
+              <!-- Icon to toggle volume slider -->
               <button onclick="toggleVolume()">
                 <img id="volume-i" src="/volume.svg" alt="Volume Icon" width="20" height="20"
-                  style="margin-top: 10px; margin-bottom: 4px; margin-left: 0.60rem; margin-right: 0.60rem; transition: filter 0.1s;"></img>
+                  style="
+                  margin-top: 10px; 
+                  margin-bottom: 4px; 
+                  margin-left: 0.60rem; 
+                  margin-right: 0.60rem; 
+                  transition: filter 0.1s;
+                  "></img>
               </button>
             </div>
-            <!-- Need to connect volume adjustor to this slider -->
+            <!-- Volume slider -->
             <div class="absolute">
               <div id="player" style="display: none;">
-                <i class="fa fa-volume-up absolute" style="top:0; margin-left: 14px; margin-top: 4px;"></i>
+                <i class="fa fa-volume-up absolute" 
+                  style="
+                  top:0; 
+                  margin-left: 14px; 
+                  margin-top: 4px;
+                  "></i>
                 <input type="range" min="1" max="100" value="100" class="slider" id="volume"
                   onchange="showValue(this.value)" oninput="showValue(this.value)">
-                <i class="fa fa-volume-down absolute" style="bottom:0; margin-left: 16px; margin-bottom: 4px;"></i>
+                <i class="fa fa-volume-down absolute" 
+                  style="bottom:0; 
+                  margin-left: 16px; 
+                  margin-bottom: 4px;
+                  "></i>
               </div>
             </div>
             <!-- contain to row by setting height to 29px -->
-            <div id="volume-line" style="height: 30px; width: 1px; background-color: black;"></div>
+            <div id="volume-line" 
+              style="
+              height: 30px; 
+              width: 1px; 
+              background-color: black;
+              "></div>
             <div class="flex flex-row display">
               <div class="pl-2">
                 <p class="whitespace-nowrap" id="show_title"></p>
               </div>
             </div>
           </div>
-          <div id="page-links" class="flex items-center" style="padding-right: 1rem;">
-            <div style="height: 30px; width: 1px; background-color: black;"></div>
+          <!-- Page reference links -->
+          <div id="page-links" class="flex items-center" 
+            style="
+            padding-right: 1rem;
+            ">
+            <div 
+              style="
+              height: 30px; 
+              width: 1px; 
+              background-color: black;
+              "></div>
             <ul class="flex list-none ltr:text-right rtl:text-left sm:flex-row">
               {{ if .Site.Menus.main }}
               {{ range .Site.Menus.main }}
               <li style="margin-left: 1rem;">
                 <a class="decoration-primary-500 hover:text-neutral-500 hover:underline hover:decoration-1 hover:underline-offset-2 hover:text-gray-400 hover:decoration-wavy"
-                  style="text-decoration-skip-ink: none;" href="{{ .URL }}" title="{{ .Title }}">{{
+                  style="
+                  text-decoration-skip-ink: none;" 
+                  href="{{ .URL }}" 
+                  title="{{ .Title }}">{{
                   .Name
                   | markdownify | emojify }}</a>
               </li>
@@ -124,24 +197,49 @@
               <p class="px-3 py-1 font-bold">PLAYING</p>
             </div>
             <!-- contain to row by setting height to 29px -->
-            <div id="playing-text" style="height: 30px; width: 1px; background-color: black;"></div>
+            <div id="playing-text" 
+              style="
+              height: 30px; 
+              width: 1px; 
+              background-color: black;
+              "></div>
             <div class="flex flex-row whitespace-nowrap">
               <p id="playing-song" class="pl-2 pr-3 py-1"
-                style="height: 30px; font-family: 'IBM Plex Mono', monospace;">
+                style="
+                height: 30px; 
+                font-family: 'IBM Plex Mono', monospace;
+                ">
               </p>
             </div>
           </div>
+          <!-- Social media icons -->
           <div id="social-media" class="flex items-center" style="padding-right: 1rem">
-            <div style="height: 30px; width: 1px; background-color: black; margin-right: 1rem;"></div>
+            <div 
+              style="
+              height: 30px; 
+              width: 1px; 
+              background-color: black; 
+              margin-right: 1rem;
+              "></div>
             <a href="https://www.instagram.com/kscuradio/?hl=en" target="_blank">
               <i class="fa fa-instagram px-2 hover:text-neutral-400"
-                style="font-size: 24px; transition: color 0.1s;"></i>
+                style="
+                font-size: 24px; 
+                transition: color 0.1s;
+                "></i>
             </a>
             <a href="https://twitter.com/kscu" target="_blank">
-              <i class="fa fa-twitter px-2 hover:text-neutral-400" style="font-size: 24px; transition: color 0.1s;"></i>
+              <i class="fa fa-twitter px-2 hover:text-neutral-400" 
+                style="
+                font-size: 24px; 
+                transition: color 0.1s;
+                "></i>
             </a>
             <a href="https://open.spotify.com/user/kscu" target="_blank">
-              <i class="fa fa-spotify px-2 hover:text-neutral-400" style="font-size: 24px; transition: color 0.1s;"></i>
+              <i class="fa fa-spotify px-2 hover:text-neutral-400" 
+                style="font-size: 24px; 
+                transition: color 0.1s;
+                "></i>
             </a>
           </div>
         </div>
@@ -150,7 +248,7 @@
   </div>
 </div>
 
-<!-- create a third row when screen width is too small-->
+<!-- Third row appears when screen width gets smaller -->
 <div id="third-row">
   <div id="third-row" class="font-medium text-sm z-10">
     <div class="px-6">
@@ -160,48 +258,123 @@
       border-left: 1px solid black;
       border-right: 1px solid black">
         <div class="flex justify-left items-center">
-          <div id="new-social-media" class="flex items-center" style="padding-left: 0.5rem; padding-top: 0.1rem">
+          <!-- Social media icons in third row -->
+          <!-- Disappears when screen width gets too small -->
+          <div id="new-social-media" class="flex items-center" 
+            style="
+            padding-left: 0.5rem; 
+            padding-top: 0.1rem;
+            ">
             <a href="https://www.instagram.com/kscuradio/?hl=en" target="_blank">
               <i class="fa fa-instagram px-2 hover:text-neutral-500"
-                style="font-size: 24px; transition: color 0.1s;"></i>
+                style="
+                font-size: 24px; 
+                transition: color 0.1s;
+                "></i>
             </a>
             <a href="https://twitter.com/kscu" target="_blank">
-              <i class="fa fa-twitter px-2 hover:text-neutral-500" style="font-size: 24px; transition: color 0.1s;"></i>
+              <i class="fa fa-twitter px-2 hover:text-neutral-500" 
+                style="
+                font-size: 24px; 
+                transition: color 0.1s;
+                "></i>
             </a>
             <a href="https://open.spotify.com/user/kscu" target="_blank">
-              <i class="fa fa-spotify px-2 hover:text-neutral-500" style="font-size: 24px; transition: color 0.1s;"></i>
+              <i class="fa fa-spotify px-2 hover:text-neutral-500" 
+                style="
+                font-size: 24px; 
+                transition: color 0.1s;
+                "></i>
             </a>
-            <div style="height: 30px; width: 1px; background-color: black; margin-left: 0.5rem;"></div>
+            <div 
+              style="
+              height: 30px; 
+              width: 1px; 
+              background-color: black; 
+              margin-left: 0.5rem;
+              "></div>
           </div>
+          <!-- Play pause buttons in third row -->
           <div class="flex-grow m-0 px-0 py-0">
             <button id="play-pause-mobile" class="">
               <img id="play-mobile" src="/play-solid.svg" alt="Click to Play" height="12" width="12"
-                style="margin-top: 12px; margin-bottom: 6px; margin-left: 14px; margin-right: 14px; transition: filter 0.1s;">
+                style="
+                margin-top: 12px; 
+                margin-bottom: 6px; 
+                margin-left: 14px; 
+                margin-right: 14px; 
+                transition: filter 0.1s;
+                ">
               <img id="pause-mobile" src="/pause-solid.svg" alt="Click to Pause" height="12" width="12"
-                style="margin-top: 12px; margin-bottom: 6px; margin-left: 14px; margin-right: 14px; transition: filter 0.1s; display: none;">
+                style="
+                margin-top: 12px; 
+                margin-bottom: 6px; 
+                margin-left: 14px; 
+                margin-right: 14px; 
+                transition: filter 0.1s; 
+                display: none;
+                ">
               <img id="loader-mobile" src="/tower-broadcast-solid.svg" alt="Loading" height="12" width="12"
-                style="margin-top: 12px; margin-bottom: 6px; margin-left: 14px; margin-right: 14px; transition: filter 0.1s; display: none;">
+                style="
+                margin-top: 12px; 
+                margin-bottom: 6px; 
+                margin-left: 14px; 
+                margin-right: 14px; 
+                transition: filter 0.1s; 
+                display: none;
+                ">
             </button>
           </div>
-          <div style="height: 30px; width: 1px; background-color: black;"></div>
+          <div 
+            style="
+            height: 30px; 
+            width: 1px; 
+            background-color: black;
+            "></div>
           <div id="mobile-volume" class="flex-grow m-0 px-0 py-0">
-            <!-- Need to connect volume adjustor to this svg -->
+            <!-- Volume slider icon that toggles in third row -->
             <button onclick="toggleVolume()">
               <img id="volume-i" src="/volume.svg" alt="Volume Icon" width="20" height="20"
-                style="margin-top: 10px; margin-bottom: 4px; margin-left: 0.60rem; margin-right: 0.60rem; transition: filter 0.1s;"></img>
+                style="
+                margin-top: 10px; 
+                margin-bottom: 4px; 
+                margin-left: 0.60rem; 
+                margin-right: 0.60rem; 
+                transition: filter 0.1s;
+                "></img>
             </button>
           </div>
-          <div id="mobile-volume-bar" style="height: 30px; width: 1px; background-color: black;"></div>
+          <div id="mobile-volume-bar" 
+            style="
+            height: 30px; 
+            width: 1px; 
+            background-color: black;
+            "></div>
         </div>
-
-        <div id="new-page-links" class="flex items-center" style="padding-right: 1rem; height: 30px;">
-          <div style="height: 30px; width: 1px; background-color: black;"></div>
+        <!-- Page links in third row -->
+        <div id="new-page-links" class="flex items-center" 
+          style="
+          padding-right: 1rem; 
+          height: 30px;
+          ">
+          <div 
+            style="
+            height: 30px; 
+            width: 1px; 
+            background-color: black;
+            "></div>
           <ul class="flex list-none ltr:text-right rtl:text-left sm:flex-row">
             {{ if .Site.Menus.main }}
             {{ range .Site.Menus.main }}
-            <li style="margin-left: 1rem;">
+            <li 
+              style="
+              margin-left: 1rem;
+              ">
               <a class="decoration-primary-500 hover:text-neutral-500 hover:underline hover:decoration-1 hover:underline-offset-2 hover:text-gray-400 hover:decoration-wavy"
-                style="text-decoration-skip-ink: none;" href="{{ .URL }}" title="{{ .Title }}">{{
+                style="
+                text-decoration-skip-ink: none;" 
+                href="{{ .URL }}" 
+                title="{{ .Title }}">{{
                 .Name
                 | markdownify | emojify }}</a>
             </li>
@@ -213,7 +386,10 @@
     </div>
   </div>
 </div>
+
+<!-- CSS -->
 <style>
+  /* Effects for flashing red dot */
   @keyframes pulse-red {
     0% {
       transform: scale(0.95);
@@ -231,6 +407,7 @@
     }
   }
 
+  /* CSS for flashing red dot*/ 
   #live-now-circle {
 
     /* display: flex; */
@@ -249,6 +426,7 @@
     margin-right: 1px
   }
 
+  /* Media queries for screen width adjustment */
   /* hides third row until screen width gets smaller */
   @media (min-width: 821px) {
     #third-row {
@@ -369,6 +547,7 @@
     cursor: pointer;
   }
 
+  /* Hover effects for SVG logos */
   a:hover > div > #kscu-logo {
     filter: invert(50%);
   }
