--- a/themes/kscu-theme/layouts/partials/head.html
+++ b/themes/kscu-theme/layouts/partials/head.html
@@ -74,9 +74,12 @@
   {{ if templates.Exists "partials/favicons.html" }}
     {{ partialCached "favicons.html" .Site }}
   {{ else }}
-    <link rel="apple-touch-icon" sizes="180x180" href="{{ "apple-touch-icon.png" | relURL }}" />
-    <link rel="icon" type="image/png" sizes="32x32" href="{{ "favicon-32x32.png" | relURL }}" />
-    <link rel="icon" type="image/png" sizes="16x16" href="{{ "favicon-16x16.png" | relURL }}" />
+    <link rel="apple-touch-icon" sizes="180x180" href="{{ "favicon-180.png" | relURL }}" />
+    
+    <link rel="icon" type="image/png" sizes="192x192" href="{{ " favicon-192.png" | relURL }}" />
+    <link rel="icon" type="image/png" sizes="128x128" href="{{ " favicon-128.png" | relURL }}" />
+    <link rel="icon" type="image/png" sizes="32x32" href="{{ "favicon-32.png" | relURL }}" />
+
     <link rel="manifest" href="{{ "site.webmanifest" | relURL }}" />
   {{ end }}
   {{/* Site Verification */}}
