--- a/themes/kscu-theme/layouts/partials/footer.html
+++ b/themes/kscu-theme/layouts/partials/footer.html
@@ -20,7 +20,7 @@
           <p id="title_text" class="text-xl font-bold text-neutral-900"> KSCU 103.3 FM </p>
           <p id="title_text" class="text-sm"> Santa Clara University's Student Run Radio</p>
           <a href="https://publicfiles.fcc.gov/fm-profile/KSCU">
-            <span id="opif" class="text-sm font-bold hover:underline hover:decoration-1 hover:underline-offset-2 hover:text-gray-400 hover:decoration-wavy">Access Public Inspection File (OPIF)</p>
+            <span id="opif" class="text-sm font-bold hover:underline hover:decoration-1 hover:underline-offset-2 hover:text-gray-400 hover:decoration-wavy" style="text-decoration-skip-ink: none;">Access Public Inspection File (OPIF)</p>
           </a>
         </div>
         <div id="address" class="text-md py-3 font-medium">
