--- a/themes/kscu-theme/layouts/partials/footer.html
+++ b/themes/kscu-theme/layouts/partials/footer.html
@@ -14,11 +14,11 @@
 <footer class="font-sm text-sm relative z-10 pt-3 pb-8">
   <div class="px-6 pt-2 pb-4 max-w-7xl m-auto">
     <div class="flex flex-col justify-between border">
-      <div id="flex_container" class="flex justify-between items-center px-2"
+    <div id="flex_container" class="flex justify-between items-center px-2"
         style="font-family: 'IBM Plex Mono', monospace;">
         <div id="title_footer">
           <p id="title_text" class="text-xl font-bold text-neutral-900"> KSCU 103.3 FM </p>
-          <p id="title_text" class="text-sm"> Santa Clara University's Student Run Radio</p>
+          <p id="title_text" class="text-sm">Santa Clara University's Student-Run Radio</p>
           <a href="https://publicfiles.fcc.gov/fm-profile/KSCU">
             <span id="opif" class="text-sm font-bold hover:underline hover:decoration-1 hover:underline-offset-2 hover:text-gray-400 hover:decoration-wavy" style="text-decoration-skip-ink: none;">Access Public Inspection File (OPIF)</p>
           </a>
