Moved blockquote color out of TW.

--- a/themes/kscu-theme/layouts/partials/header/basic.html
+++ b/themes/kscu-theme/layouts/partials/header/basic.html
@@ -593,6 +593,10 @@
   button:hover>#pause-mobile {
     filter: invert(50%);
   }
+  
+  blockquote {
+    border-left-color: #363940;
+  }
 </style>
 <!-- {{ $jsStore := resources.Get "js/store2.js" | resources.Minify | resources.Fingerprint "sha512" }}
 <script defer type="text/javascript" src="{{ $jsStore.RelPermalink }}"
