Added importance to border-left-color.

--- a/themes/kscu-theme/layouts/partials/header/basic.html
+++ b/themes/kscu-theme/layouts/partials/header/basic.html
@@ -595,7 +595,7 @@
   }
   
   blockquote {
-    border-left-color: #363940;
+    border-left-color: #363940 !important;
   }
 </style>
 <!-- {{ $jsStore := resources.Get "js/store2.js" | resources.Minify | resources.Fingerprint "sha512" }}
