Only add player and volume hover effect on devices with a pointer.

--- a/themes/kscu-theme/assets/css/main.css
+++ b/themes/kscu-theme/assets/css/main.css
@@ -329,3 +329,9 @@ html {
   background: #CCCCCC;
   border-radius: 5px;
 }
+
+@media (any-hover: hover) {
+  a:hover {
+    background: yellow;
+  }
+}
