--- a/themes/kscu-theme/layouts/partials/header/basic.html
+++ b/themes/kscu-theme/layouts/partials/header/basic.html
@@ -574,24 +574,26 @@
     filter: invert(50%);
   }
 
-  button:hover>#volume-i {
-    filter: invert(50%);
-  }
+  @media (any-hover: hover) {
+    button:hover>#volume-i {
+      filter: invert(50%);
+    }
 
-  button:hover>#play {
-    filter: invert(50%);
-  }
+    button:hover>#play {
+      filter: invert(50%);
+    }
 
-  button:hover>#play-mobile {
-    filter: invert(50%);
-  }
+    button:hover>#play-mobile {
+      filter: invert(50%);
+    }
 
-  button:hover>#pause {
-    filter: invert(50%);
-  }
+    button:hover>#pause {
+      filter: invert(50%);
+    }
 
-  button:hover>#pause-mobile {
-    filter: invert(50%);
+    button:hover>#pause-mobile {
+      filter: invert(50%);
+    }
   }
   
   blockquote {
