--- a/themes/kscu-theme/layouts/_default/single.html
+++ b/themes/kscu-theme/layouts/_default/single.html
@@ -19,7 +19,8 @@
           </div>
         </div>
       {{ end }}
-      <div class="min-w-0 min-h-0 max-w-3xl">
+      <!-- <div class="flex"> -->
+      <div id="content-wrapper" class="min-w-0 min-h-0 max-w-3xl">
         {{ .Content | emojify }}
       </div>
     </section>
