--- a/themes/kscu-theme/layouts/partials/header/basic.html
+++ b/themes/kscu-theme/layouts/partials/header/basic.html
@@ -387,17 +387,17 @@
   @keyframes pulse-red {
     0% {
       transform: scale(0.95);
-      box-shadow: 0 0 0 0 rgba(255, 82, 82, 0.7);
+      box-shadow: 0 0 0 0 rgba(191, 81, 77, 0.7);
     }
 
     70% {
       transform: scale(1);
-      box-shadow: 0 0 0 10px rgba(255, 82, 82, 0);
+      box-shadow: 0 0 0 10px rgba(191, 81, 77, 0);
     }
 
     100% {
       transform: scale(0.95);
-      box-shadow: 0 0 0 0 rgba(255, 82, 82, 0);
+      box-shadow: 0 0 0 0 rgba(191, 81, 77, 0);
     }
   }
 
@@ -407,7 +407,7 @@
     /* display: flex; */
     width: 12px;
     height: 12px;
-    background-color: #b11010;
+    background-color: rgb(191, 81, 77);
 
     border-radius: 6px;
     opacity: 100;
@@ -415,7 +415,7 @@
 
     box-shadow: 0 0 0 0 rgb(48, 27, 27);
     transform: scale(1);
-    animation: pulse-red 2s infinite;
+    animation: pulse-red 3s infinite;
     animation-play-state: running;
     margin-right: 1px
   }
