--- a/assets/css/compiled/main.css
+++ b/assets/css/compiled/main.css
@@ -1861,6 +1861,10 @@ body:has(#menu-controller:checked) {
   visibility: hidden;
 }
 
+.static {
+  position: static;
+}
+
 .fixed {
   position: fixed;
 }
@@ -1980,16 +1984,12 @@ body:has(#menu-controller:checked) {
   margin-right: 0px;
 }
 
-.mt-4 {
-  margin-top: 1rem;
+.mt-6 {
+  margin-top: 1.5rem;
 }
 
 .mr-3 {
   margin-right: 0.75rem;
-}
-
-.mt-6 {
-  margin-top: 1.5rem;
 }
 
 .mb-3 {
@@ -2241,6 +2241,10 @@ body:has(#menu-controller:checked) {
 
 .flex-col {
   flex-direction: column;
+}
+
+.flex-col-reverse {
+  flex-direction: column-reverse;
 }
 
 .flex-wrap {
