Temp fix for mobile scrolling of show.

--- a/themes/kscu-theme/layouts/partials/header/basic.html
+++ b/themes/kscu-theme/layouts/partials/header/basic.html
@@ -29,11 +29,12 @@
  -->
 <div id="nav" class="font-medium text-sm z-10">
   <div class="px-6 pt-4 max-w-7xl m-auto">
-    <div class="flex justify-between items-center overflow-hidden"
+    <div class="flex justify-between items-center"
       style="
       border: 1px solid black;
       height: 58px;
-      overflow: hidden;
+      overflow-x: scroll;
+      overflow-y: hidden;
       ">
       <div class="flex px-0 items-center" 
       style="
