--- a/themes/kscu-theme/layouts/partials/header/basic.html
+++ b/themes/kscu-theme/layouts/partials/header/basic.html
@@ -33,8 +33,7 @@
       style="
       border: 1px solid black;
       height: 58px;
-      overflow-x: scroll;
-      overflow-y: hidden;
+      overflow: hidden;
       ">
       <div class="flex px-0 items-center" 
       style="
