Added showPhone variable and phone on footer.

--- a/assets/css/compiled/main.css
+++ b/assets/css/compiled/main.css
@@ -2200,6 +2200,10 @@ body:has(#menu-controller:checked) {
   flex: 1 1 auto;
 }
 
+.flex-shrink {
+  flex-shrink: 1;
+}
+
 .flex-grow {
   flex-grow: 1;
 }
@@ -2727,6 +2731,11 @@ body:has(#menu-controller:checked) {
 
 .outline {
   outline-style: solid;
+}
+
+.blur {
+  --tw-blur: blur(8px);
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 
 .invert {
