--- a/themes/kscu-theme/layouts/partials/footer.html
+++ b/themes/kscu-theme/layouts/partials/footer.html
@@ -16,18 +16,35 @@
     <div class="flex flex-col justify-between border">
     <div id="flex_container" class="flex justify-between items-center px-2"
         style="font-family: 'IBM Plex Mono', monospace;">
-        <div id="title_footer">
+        <div id="title_footer" class="my-3">
           <p id="title_text" class="text-xl font-bold text-neutral-900"> KSCU 103.3 FM </p>
           <p id="title_text" class="text-sm">Santa Clara University's Student-Run Radio</p>
           <a href="https://publicfiles.fcc.gov/fm-profile/KSCU">
             <span id="opif" class="text-sm font-bold hover:underline hover:decoration-1 hover:underline-offset-2 hover:text-gray-400 hover:decoration-wavy" style="text-decoration-skip-ink: none;">Access Public Inspection File (OPIF)</p>
           </a>
         </div>
+        {{ if .Site.Params.footer.showPhone | default false}}
+        <div id="address" class="text-md py-3 font-base">
+          <p class="text-sm">Studio Phone: (408)-554-5728</p>
+          <p>Email us: <a style="text-decoration-skip-ink: none;" class="font-bold hover:underline hover:decoration-1 hover:underline-offset-2 hover:text-gray-400 hover:decoration-wavy" href="mailto:gm@kscu.org">gm@kscu.org</a></p>
+          <!-- <p> 500 El Camino Real </p> -->
+          <a href="/credits">
+            <p id="credits"
+              class="text-sm font-bold hover:underline hover:decoration-1 hover:underline-offset-2 hover:text-gray-400 hover:decoration-wavy"
+              style="text-decoration-skip-ink: none;">Site Credits</p>
+          </a>
+        {{ else }}
         <div id="address" class="text-md py-3 font-medium">
+          <p>Email us: <a style="text-decoration-skip-ink: none;"
+            class="font-bold hover:underline hover:decoration-1 hover:underline-offset-2 hover:text-gray-400 hover:decoration-wavy"
+            href="mailto:gm@kscu.org">gm@kscu.org</a></p>
           <p> 500 El Camino Real </p>
-          <p> Santa Clara </p>
-          <p> CA, 95050 </p>
+          <!-- Link to site credits -->
+          <a href="/credits">
+            <p id="credits" class="text-sm font-semibold hover:underline hover:decoration-1 hover:underline-offset-2 hover:text-gray-400 hover:decoration-wavy" style="text-decoration-skip-ink: none;">Site Credits</p>
+          </a>
         </div>
+        {{ end }}
 
       </div>
 
